...
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */

// Titles
"title_home" = "Home";
"title_favourites" = "Favourites";
"title_people" = "People";
"title_rooms" = "Rooms";
"warning" = "Warning";

// Actions
"view" = "View";
"next" = "Next";
"back" = "Back";
"continue" = "Continue";
"create" = "Create";
"start" = "Start";
"leave" = "Leave";
"remove" = "Remove";
"invite" = "Invite";
"retry" = "Retry";
"on" = "On";
"off" = "Off";
"cancel" = "Cancel";
"save" = "Save";
"join" = "Join";
"decline" = "Decline";
"accept" = "Accept";
"preview" = "Preview";
"camera" = "Camera";
...
"rename" = "Rename";
"collapse" = "collapse";
"send_to" = "Send to %@";
"sending" = "Sending";

// Authentication
"auth_login" = "Log in";
"auth_register" = "Register";
"auth_submit" = "Submit";
"auth_skip" = "Skip";
"auth_send_reset_email" = "Send Reset Email";
"auth_return_to_login" = "Return to login screen";
"auth_user_id_placeholder" = "Email";
"auth_password_placeholder" = "Password";
"auth_new_password_placeholder" = "New password";
"auth_user_name_placeholder" = "User name";
"auth_optional_email_placeholder" = "Email address";
"auth_email_placeholder" = "Email address";
"auth_optional_phone_placeholder" = "Phone number (optional)";
"auth_phone_placeholder" = "Phone number";
...

// Rooms tab
"room_directory_no_public_room" = "No public rooms available";

// Search
"search_rooms" = "Rooms";
"search_messages" = "Messages";
"search_people" = "People";
"search_files" = "Files";
"search_default_placeholder" = "Search";
"search_people_placeholder" = "Search by User ID, Name or email";
"search_no_result" = "No results";

...
"room_preview_subtitle" = "This is a preview of this room. Room interactions have been disabled.";
"room_preview_unlinked_email_warning" = "This invitation was sent to %@, which is not associated with this account. You may wish to login with a different account, or add this email to your this account.";
"room_preview_try_join_an_unknown_room" = "You are trying to access %@. Would you like to join in order to participate in the discussion?";
"room_preview_try_join_an_unknown_room_default" = "a room";

// Settings
"settings_title" = "Settings";
"account_logout_all" = "Logout all accounts";

"settings_config_no_build_info" = "No build info";
"settings_mark_all_as_read" = "Mark all messages as read";
"settings_report_bug" = "Report bug";
"settings_clear_cache" = "Clear cache";
...
"settings_crypto_device_id" = "\nDevice ID: ";
"settings_crypto_device_key" = "\nDevice key: ";
"settings_crypto_export" = "Export keys";
"settings_crypto_blacklist_unverified_devices" = "Encrypt to verified devices only";

// Room Details
"room_details_title" = "Room Details";
"room_details_people" = "Members";
"room_details_files" = "Files";
"room_details_settings" = "Settings";
"room_details_photo" = "Room Photo";
"room_details_room_name" = "Room Name";
"room_details_topic" = "Topic";
"room_details_favourite_tag" = "Favourite";
...
