...
    }
    else{
        UIAlertView *alert = [[UIAlertView alloc] initWithTitle:@"No room to send"
                                                        message:@""
                                                       delegate:self
                                              cancelButtonTitle:nil
                                              otherButtonTitles:@"OK", nil];
        [alert show];
    }
   
}


...
