...
                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                    </state>
                                    <connections>
                                        <action selector="onButtonPressed:" destination="-1" eventType="touchUpInside" id="nvH-aw-ZJK"/>
                                    </connections>
                                </button>
                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="remove_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="VA2-Cu-dX6">
                                    <rect key="frame" x="23" y="35" width="22" height="22"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="22" id="AVO-AA-HaQ"/>
                                        <constraint firstAttribute="width" constant="22" id="UST-cV-kEd"/>
                                    </constraints>
                                </imageView>
...
